<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ikea Warehouse</string>
    <string name="load_data_from_server">Load data from server ...</string>
    <string name="tryAgain">Try again</string>
    <string name="internetConnectionProblemTitle">Problem connecting to internet</string>
    <string name="serverConnectionProblemTitle">Problem connecting to server</string>
    <string name="settings">Settings</string>

    <string name="reloadDataInfo">You have not connection to internet, connect wifi or mobile internet and try again.</string>
    <string name="serverConnectionProblemMessage">You have not connection to server, check correct address and try again.</string>

    <string name="pref_server_url">Server URL</string>
    <string name="pref_server_url_summ">Input server for sync</string>

    <string name="pref_user_login">User login</string>
    <string name="pref_user_login_summ">login user to auth to server for sync</string>


    <string name="pref_user_password">User password URL</string>
    <string name="pref_user_password_summ">password user to auth to server for syn</string>

    <string name="weight">Weight</string>
    <string name="count">Count</string>
    <string name="price">Price</string>
    <string name="productId">ProductId</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>
    <string name="language_sum">Language Interface</string>
    <string name="server_configuration">Server configuration</string>

    <string name="add_paragon">Add Paragon</string>
    <string name="delete_paragon">Delete paragon</string>
    <string name="refresh">Refresh</string>
    <string name="history">History</string>
    <string name="exit">Exit</string>

    <string name="loading">Loading</string>
    <string name="wait_msg">Please wait a moment!</string>
    <string name="productNotAvailable">Product not available in order</string>
    <string name="paragonSendProblem">Call Jarek have problem with internet or server is down</string>
    <string name="date">Date</string>


</resources>
