<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/add_paragon"
            android:icon="@drawable/ic_action_new_light"
            android:showAsAction="always|withText"
            android:title="@string/add_paragon"
            android:onClick="createParagon"/>
    <item
            android:id="@+id/delete_paragon"
            android:icon="@drawable/ic_action_remove_light"
            android:title="@string/delete_paragon"
            android:showAsAction="always|withText"
            android:onClick="deleteParagon"/>
    <item
            android:id="@+id/send_product"
            android:icon="@drawable/ic_action_send_now"
            android:showAsAction="always"
            android:onClick="sendToServer"
            android:title="Send"/>

    <item
            android:showAsAction="never|withText"
            android:onClick="settings"
            android:title="@string/settings" />

    <item
            android:showAsAction="never|withText"
            android:onClick="history"
            android:title="@string/history" />

    <item
            android:id="@+id/refresh"
            android:icon="@drawable/ic_action_refresh"
            android:showAsAction="never|withText"
            android:title="@string/refresh"
            android:onClick="refresh" />

    <item
            android:showAsAction="never|withText"
            android:onClick="close"
            android:title="@string/exit" />

</menu>